<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserSignInActivity">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/kutuphaneappicon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:id="@+id/kullaniciAdiTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/appIcon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameHintText"
            android:maxLength="20"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:id="@+id/sifreTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kullaniciAdiTextInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/soyisim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:hint="@string/passwordHintText"
            android:maxLength="20"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/girisButton"
        style="@style/myButton"
        android:text="@string/signInButtonText"
        app:layout_constraintTop_toBottomOf="@+id/beniHatirlaSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/kayitOlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpTextUnderLine"
        android:textColor="@color/blue_800"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/girisButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/beniHatirlaSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remindMe"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/sifreTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/sifreTextInputLayout"
        app:switchPadding="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>